--- a/style.css
+++ b/style.css
@@ -281,4 +281,24 @@ input[type=text]{
     margin-bottom: 32px;
     text-align: center;
 }
+.btn-5{
+        font-size: 16px;
+        /* font-weight: semibold; */
+        padding: 11px 20px;
+        color: #FFFFFF;
+        background-color: #09a15c;
+        border: none;
+        border-radius: 0px 10px 10px 0px;
+        cursor: pointer;
+}
+input[type=email]{
+    width: 600px;
+    height: 38px;
+    text-align: center;
+    border: none;
+    margin-bottom: 15px;
+}
+.subscribe .input{
+
+}
 
