--- a/style.css
+++ b/style.css
@@ -260,10 +260,11 @@ input[type=text]{
 }
 /* subscribe css */
 .subscribe{
-    width: 1280px;
+    width: 1100px;
     margin: 0 auto;
-    height: 395px;
+    height: 250px;
     margin-bottom: 80px;
+    padding: 80px 90px;
     background-color: #c6e4d6;
     border-radius: 24px;
 }
@@ -296,9 +297,12 @@ input[type=email]{
     height: 38px;
     text-align: center;
     border: none;
-    margin-bottom: 15px;
+    border-radius: 10px 0px 0px 10px;
 }
-.subscribe .input{
-
+.subscribe-input{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-bottom: 30px;
 }
 
