--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 main{
     background-color: #f5f5f5;
 }
+.button:hover{
+background-color: #0E0E0E;
+}
 .banner{
     width: 1100px;
     height: 560px;
@@ -151,6 +154,7 @@ color: #0e0e0ec4;
     height: 256px;
     width: 1240px;
     margin: 0 auto;
+    border: 1px solid gray;
     border-radius: 16px;
     margin-bottom: 80px;
     padding: 26px;
@@ -269,10 +273,11 @@ color: #0e0e0ec4;
     background-color: #c6e4d6;
 }
 input[type=text]{
-    width: 1032px;
+    width: 1050px;
     height: 64px;
     text-align: center;
     border: 1px solid grey;
+    border-radius: 5px;
     margin-bottom: 15px;
 }
 .donate-body{
